--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -2,3 +2,4 @@ no_students: 5
 img_path: 'E:\project\new_face_recognition\images'
 model_path: 'E:\project\new_face_recognition\saved_model'
 size: 160
+encoder_path: 'E:\project\new_face_recognition\ENC\encoder'
