--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -1,5 +1,5 @@
-no_students: 5
-img_path: 'E:\project\new_face_recognition\images'
-model_path: 'E:\project\new_face_recognition\saved_model'
+encoder_path: E:\project\new_face_recognition\ENC\encoder
+img_path: E:\project\new_face_recognition\images\
+model_path: E:\project\new_face_recognition\saved_model
+no_students: 6
 size: 160
-encoder_path: 'E:\project\new_face_recognition\ENC\encoder'
